objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Ready__c</fullName>
        <formula>!ISBLANK( Customer_Signer__c ) &amp;&amp; TEXT( Copado_Signer__c ) != &quot;&quot; &amp;&amp; TEXT( Type__c ) != &quot;&quot; &amp;&amp; TEXT( Paper__c ) != &quot;&quot; &amp;&amp; TEXT(Account__r.PS_Copado_Billing_Entity__c ) != &quot;&quot; &amp;&amp; !ISBLANK( Account__r.BillingStreet ) &amp;&amp; !ISBLANK( Account__r.BillingCity ) &amp;&amp; !ISBLANK( Account__r.BillingState ) &amp;&amp; !ISBLANK(Account__r.BillingPostalCode)</formula>
        <label>Approval Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement</relationshipLabel>
        <relationshipName>CO_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreement</relationshipLabel>
        <relationshipName>CO_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Agreement</relationshipLabel>
        <relationshipName>CO_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Id__c</fullName>
        <formula>IF(TEXT( Type__c ) = &quot;MSA&quot; &amp;&amp;  TEXT(Account__r.PS_Copado_Billing_Entity__c) = &quot;Copado, Inc.&quot;, $Setup.Reference_Id__c.MSA_Copado_NA__c, 
IF(TEXT( Type__c ) = &quot;NDA&quot; &amp;&amp;  TEXT(Account__r.PS_Copado_Billing_Entity__c) = &quot;Copado, Inc.&quot;, $Setup.Reference_Id__c.NDA_Copado_NA__c,
IF(TEXT( Type__c ) = &quot;MSA&quot; &amp;&amp;  TEXT(Account__r.PS_Copado_Billing_Entity__c) = &quot;Copado Ltd.&quot;, $Setup.Reference_Id__c.MSA_Copado_EMEA__c,
IF(TEXT( Type__c ) = &quot;MSA&quot; &amp;&amp;  TEXT(Account__r.PS_Copado_Billing_Entity__c) = &quot;Copado Solutions, S.L.&quot;, $Setup.Reference_Id__c.MSA_Copado_EMEA__c,
&quot;&quot;))))</formula>
        <label>Conga Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Signed_Date__c</fullName>
        <label>Copado Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copado_Signer__c</fullName>
        <defaultValue>&quot;0050N000007Zqd9&quot;</defaultValue>
        <label>Copado Signer</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0050N000007Zqd9</fullName>
                    <default>true</default>
                    <label>Walker Mitchell</label>
                </value>
                <value>
                    <fullName>0050N000007Zmh2</fullName>
                    <label>Ted Elliott</label>
                </value>
                <value>
                    <fullName>Greg Higgins</fullName>
                </value>
                <value>
                    <fullName>Arwa Kaddoura</fullName>
                    <isActive>false</isActive>
                    <label>Arwa Kaddoura</label>
                </value>
                <value>
                    <fullName>0050N00000813By</fullName>
                    <isActive>false</isActive>
                    <label>Simon Bishop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Signed_Date__c</fullName>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Customer Signer must be a Contact at the Account.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Customer Signer)</relationshipLabel>
        <relationshipName>AgreementsSigner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_Date__c</fullName>
        <label>Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who at customer/prospect is going to review this agreement</inlineHelpText>
        <label>Reviewer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements (Legal Contact)</relationshipLabel>
        <relationshipName>AgreementsLegal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper__c</fullName>
        <defaultValue>&quot;Copado&quot;</defaultValue>
        <label>Paper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <defaultValue>&quot;Net 30&quot;</defaultValue>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Document_Title__c</fullName>
        <label>Primary Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Document__c</fullName>
        <label>Primary Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skipped_Steps__c</fullName>
        <label>Skipped Steps</label>
        <length>32728</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Customer Review</fullName>
                </value>
                <value>
                    <fullName>Copado Review</fullName>
                </value>
                <value>
                    <fullName>Approval Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Signature</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <defaultValue>0.07</defaultValue>
        <label>Uplift</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Executed</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Executed</value>
        </filters>
        <label>Executed</label>
    </listViews>
    <listViews>
        <fullName>My_Agreements</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Agreements</label>
    </listViews>
    <listViews>
        <fullName>Negotiating</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Copado Review,Customer Review,Approved,Pending Signature</value>
        </filters>
        <label>Negotiating</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>